Ingress/test-ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: game-2048
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: game-2048
  name: nginx
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx
  replicas: 5
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx
    spec:
      containers:
      - image: nginx:latest
        imagePullPolicy: Always
        name: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: game-2048
  name: nginx
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: game-2048
  name: hello
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: hello
  replicas: 5
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello
    spec:
      containers:
      - image: chandrasekharkolla/hello
        imagePullPolicy: Always
        name: hello
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: game-2048
  name: hello
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hello
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: game-2048
  name: test
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: test
  replicas: 5
  template:
    metadata:
      labels:
        app.kubernetes.io/name: test
    spec:
      containers:
      - image: chandrasekharkolla/test
        imagePullPolicy: Always
        name: test
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: game-2048
  name: test
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/name: test
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: game-2048
  name: ingress-2048
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health/liveness
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /test
          pathType: Prefix
          backend:
            service:
              name: test
              port:
                number: 8080
    - http:
        paths:
        - path: /hello
          pathType: Prefix
          backend:
            service:
              name: hello
              port:
                number: 80
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx
              port:
                number: 80
